<resources>
    <string name="app_name">SayaraDz</string>

    <string name="slogan">voitures à portée de main</string>
    <string name="intro_title_1">Explorer</string>
    <string name="intro_title_2">Vendre</string>
    <string name="intro_title_3">Suivre</string>

    <string name="intro_content_1">Laissez-nous vous aider à acheter \nla voiture parfaire pour vous</string>
    <string name="intro_content_2">Obtenir un devis instantané \npour votre voiture</string>
    <string name="intro_content_3">Rester en courant avec \nles opportunités dans le marché</string>
    <string name="skip_text">Passer</string>
    <string name="auth_error_message">quelque chose s\'est mal passé pouvez-vous essayer plus tard</string>


    <string name="web_client_id">455736782811-6mtr17dvh8ph4rk6d6u6s8egk8ppntrd.apps.googleusercontent.com</string>
    <string name="facebook_app_id">355496821964693</string>
    <string name="fb_login_protocol_scheme">fb355496821964693</string>

    <string name="currency_placeholder">%1$s DA</string>
    <string name="distance_placeholder">%1$s Km</string>

    <string name="specs_list_title">Moteur et Véhicule</string>
    <string name="options_list_title">Options</string>
    <string name="colors_list_title">Couleurs</string>
    <string name="order_title">commander</string>
    <string name="order_non_available_title">non disponible</string>
    <string name="follow_title">Suivre</string>
    <string name="color_price_title">Prix Couleur</string>
    <string name="version_price_title">Prix Version</string>
    <string name="full_price_title">Prix Totale</string>
    <string name="confirmation_dialog_title">Confirmation</string>
    <string name="cancel_title">Annuler</string>
    <string name="suggested_options_list_title">Options suggéreées</string>
    <string name="published_title">Publiée le %1$s</string>
    <string name="notification_order_accepted_title">Commande approuvé</string>
    <string name="notification_order_rejected_title">Commande rejetée</string>
    <string name="notification_offer_accepted_title">Offre accepter</string>
    <string name="notification_offer_rejected_title">Offre rejeté</string>
    <string name="notification_offer_title">vous avez reçu une offre</string>
    <string name="send_offer_title">Envoyer un offre</string>
    <string name="send_title">Envoyer</string>
    <string name="accept_title">Accepter</string>
    <string name="reject_title">Refuser</string>


    <string name="choose_brand_title">Choisir votre marque</string>
    <string name="choose_model_title">Choisir votre modèle</string>
    <string name="choose_version_title">Choisir votre version</string>

    <string name="order_success_message">Votre commande est envoyeé</string>
    <string name="order_failure_message">Erreur lors de l\'envoi de la commande</string>
    <string name="announcement_success_message">Votre annonce est publiée</string>
    <string name="announcement_failure_message">Erreur lors de l\'envoi de l\'annonce</string>
    <string name="offer_success_message">Votre offre est envoyeé</string>
    <string name="offer_failure_message">Erreur lors de l\'envoi de la offre</string>
    <string name="order_dialog_message">Commander une %1$s</string>
    <string name="subscription_failure_message">l\'inscription à %1$s a echouée</string>
    <string name="subscription_success_message">l\'inscription à %1$s a réussie</string>
    <string name="offer_dialog_message">le propriétaire a fixé le prix minimum à %1$s, essayez d’offrir un prix plus élevé pour avoir une meilleure chance</string>
    <string name="non_valid_offer_error_message">une offre non valable</string>


    <string name="Moteur_vehicule">Moteur et Vehicule :</string>
    <string name="Marque">Marque</string>
    <string name="Version">Version</string>
    <string name="Annee">Annèe</string>
    <string name="Marche">Marche</string>
    <string name="Moteur">Moteur</string>
    <string name="Modele">Modèle</string>
    <string name="option">Option</string>
    <string name="price">Prix</string>

    <string name="notification_order_accepted_body">Félicitations, votre commande pour %1$s  a été approuvée</string>
    <string name="notification_order_rejected_body">Malheureusement, votre commande pour %1$s a été rejetée</string>
    <string name="notification_offer_body">%1$s vous offre %2$s dinnars pour votre %3$s</string>
    <string name="notification_offer_accepted_body">%1$s a accepter votre offre pour son %2$s, contacez lui par %3$s</string>
    <string name="notification_offer_rejected_body">%1$s a rejeté votre offre pour son %2$ss</string>


    <string-array name="notification_channel_titles">
        <item>Commandes</item>
        <item>Annonces</item>
        <item>Offres</item>
    </string-array>

    <string-array name="notification_channel_description">
        <item>vous recevrez des notifications de ce canal lorsque vos commandes seront traitées</item>
        <item>vous recevrez des notifications de ce canal lorsque vos annonces reçoivent des offres</item>
        <item>vous recevrez des notifications de ce canal lorsque vos offres seront traitées</item>
    </string-array>


</resources>
