<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="tariffviewmodel"
                type="com.autolink.sayaradz.viewmodel.TariffViewModel" />
    </data>
<ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                tools:srcCompat="@tools:sample/avatars[15]"
                android:id="@+id/version_image"
                android:transitionName="header_image"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>


        <RadioGroup
                android:id="@+id/colors_list_container"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/version_image"
               app:layout_constraintStart_toStartOf="@+id/version_image"
                app:layout_constraintEnd_toEndOf="@+id/version_image">

        </RadioGroup>


        <TextView
                android:text="@string/color_price_title"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:id="@+id/color_price_title"
                style="@style/AppTheme.Intro.Text.content.medium"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/colors_list_container"/>
        <TextView
                android:text="@string/version_price_title"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:id="@+id/version_price_title"
                style="@style/AppTheme.Intro.Text.content.medium"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/color_price_title"/>
        <TextView
                android:text="@string/full_price_title"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:id="@+id/total_price_title"
                style="@style/AppTheme.Intro.Text.content.medium"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/version_price_title"/>

        <TextView
                android:text="@{String.valueOf(tariffviewmodel.colorPriceLiveData)}"
                style="@style/AppTheme.Intro.Text.content"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/color_price"
                app:layout_constraintBaseline_toBaselineOf="@+id/color_price_title" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp"/>

        <TextView
                android:text="@{String.valueOf(tariffviewmodel.versionPriceLiveData)}"
                style="@style/AppTheme.Intro.Text.content"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/version_price"
                app:layout_constraintBaseline_toBaselineOf="@+id/version_price_title" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp"/>

        <TextView
                android:text="@{String.valueOf((tariffviewmodel.colorPriceLiveData + tariffviewmodel.versionPriceLiveData))}"
                style="@style/AppTheme.Intro.Text.content"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total_price"
                app:layout_constraintBaseline_toBaselineOf="@+id/total_price_title" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp"/>



        <TextView
                android:text="@string/specs_list_title"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:id="@+id/specs_list_title"
                style="@style/AppTheme.Intro.Text.content.medium"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/total_price_title"/>

        <LinearLayout
                android:id="@+id/specs_list_container"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/specs_list_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"/>

        <TextView
                android:text="@string/options_list_title"
                style="@style/AppTheme.Intro.Text.content.medium"
                android:textColor="@color/colorPrimary"
                android:id="@+id/options_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/specs_list_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <LinearLayout
                android:id="@+id/options_list_container"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/options_list_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"/>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/material_buttonn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/follow_title"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/options_list_container" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/material_button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
                app:icon="@drawable/ic_shop"
                android:text="@string/order_title"
                android:enabled="@{ tariffviewmodel.orderState }"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/material_buttonn"
                app:layout_constraintStart_toStartOf="@+id/material_buttonn"
                app:layout_constraintEnd_toEndOf="@+id/material_buttonn"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>